# Diploma_ToDoList

./: docker-compose.yaml  manage.py  pyproject.toml
Diploma_ToDoList/: asgi.py  settings.py  urls.py  wsgi.py
Diploma_ToDoList/core/: admin.py  apps.py  models.py
Diploma_ToDoList/core/migrations/: 0001_initial.py
